[tool.poetry]
name = "stock-predictions"
version = "0.1.0"
description = ""
authors = ["yannickpichardo <yannickpichardo@gmail.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
pandas = "^2.2.3"
streamlit = "^1.39.0"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
mypy = "^1.12.0"
ruff = "^0.6.9"
yfinance = "^0.2.44"
cython = "^3.0.11"
prophet = "^1.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
